[package]
name = "zerocore"
description = "zerocore is a secure platform for hosting your applications and data. It executes WebAssembly programs in a sandbox and provides integration with essential provider services, like the file system and database."
keywords = []
categories = []
documentation = "https://docs.rs/zerocore"
version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
